7/app-stack.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-stack
---
kind: Pod
apiVersion: v1
metadata:
  name: frontend
  namespace: app-stack
  labels:
    app: todo
    tier: frontend
spec:
  containers:
  - name: frontend
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
---

kind: Pod
apiVersion: v1
metadata:
  name: backend
  namespace: app-stack
  labels:
    app: todo
    tier: backend
spec:
  containers:
  - name: backend
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
---

kind: Pod
apiVersion: v1
metadata:
  name: database
  namespace: app-stack
  labels:
    app: todo
    tier: database
spec:
  containers:
  - name: database
    image: mysql
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
