7/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: ckad
  labels:
    tier: frontend 
    app: nginx
spec:
  containers:
  - name: frontend
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
