7/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: ckad
  labels:
    app: nginx
spec:
  type: NodePort
  selector:
    tier: backend
    app: nginx
  ports:
  - port: 9000
    targetPort: 80
    nodePort: 30000
